# OOP_Project_Aki-Kourosh

./: CMakeLists.txt  Components.h  Element.cpp  Element.h  ElementException.cpp  ElementException.h  Nodes.cpp  Nodes.h  main.cpp  pr.cpp  view.cpp  view.h
